# CharDLM

./: .gitignore  README.md  bigram.py  eval_test_set.py  eval_training_set.py  generate.py  generate_diffusion.py  main.ipynb  model.py  pyproject.toml  requirements.txt  setup.cfg  train.py  train_diffusion.py  v3.py  visualize_decoding.py
chardlm/: checkpoint.py  model.py  utils.py
karpathy-tutorial-checkpoints/: README.md  v0_bigram.py  v10_scale_the_model.py  v1_introducing_embeddings.py  v2_positional_embedding.py  v3_self_attention.py  v4_multi_head_attention.py  v5_mha_with_feedforward.py  v6_transformer_blocks.py  v7_transformer_blocks_with_skip_conns.py  v8_transformer_blocks_with_skip_conns_and_prenorm.py  v9_transformer_blocks_with_skip_conns_and_prenorm_and_block_postnorm.py
karpathy-tutorial-checkpoints/logs/: v10_scale_with_a100.txt  v3_self_attention.txt  v4_multi_head_attention.txt  v5_mha_with_feedforward.txt  v6_transformer_blocks.txt  v7_transformer_blocks_with_skip_conns.txt  v8_transformer_blocks_with_skip_conns_and_prenorm.txt  v9_transformer_blocks_with_skip_conns_and_prenorm_and_block_postnorm.txt
logs/: generate_decode.txt  run_08_run_07_but_with_better_jax.txt
nanodlm/: checkpoint.py  dataset.py  loader.py  model.py  train.py  utils.py
