[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chardlm"
version = "0.1.0"
description = "Character-level diffusion language model implemented in JAX"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Salman Faris"},
]
keywords = ["jax", "diffusion", "language-model", "flax", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "flax>=0.12.0",
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "optax>=0.1.7",
    "orbax-checkpoint>=0.5.0",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/salfaris/chardlm"
Repository = "https://github.com/salfaris/chardlm"

[tool.setuptools.packages.find]
where = ["."]
include = ["chardlm*"]
exclude = ["notebooks*", "__pycache__*", "ckpt*", "dataset*"]

[tool.flake8]
max-line-length = 88